--- a/userservice-dev.yml
+++ b/userservice-dev.yml
@@ -6,14 +6,14 @@ eureka:
     registerWithEureka: true 
     fetchRegistry: false 
     serviceUrl:
-      defaultZone: http://192.168.88.131:8761/eureka/  
+      defaultZone: http://192.168.88.130:8761/eureka/  
 spring:
   application:
     name: userservice
   datasource:
-    url: jdbc:mysql://localhost/my_mysql
-    password: 789456123
+    url: jdbc:mysql://localhost/mysql
+    password: ps123456
     driver-class-name: com.mysql.jdbc.Driver
-    username: tan_tan
+    username: root
 server:
   port: 8880
