--- a/userservice-test.yml
+++ b/userservice-test.yml
@@ -11,7 +11,7 @@ spring:
   application:
     name: userservice
   datasource:
-    url: jdbc:mysql://localhost/mysql
+    url: jdbc:mysql://localhost/mydb
     password: ps123456
     driver-class-name: com.mysql.jdbc.Driver
     username: root
